commit 'maquetado hasta pagina 21'

--- a/contenido/pag01.html
+++ b/contenido/pag01.html
@@ -22,7 +22,7 @@
             </figure>
         </div>
         <div id="cont-boton">
-            <span id="texto">Para visualizar el contenido de tu curso, desliízate hacia abajo y da clic en los
+            <span id="texto">Para visualizar el contenido de tu curso, deslízate hacia abajo y da clic en los
                 elementos
                 interactivos que parpadean.</span>
             <figure class="boton">
