--- a/contenido/pag20.html
+++ b/contenido/pag20.html
@@ -7,6 +7,179 @@
     <title>Página 20</title>
 </head>
 <body>
-    Página 20
+    <div class="cuadro2click">
+        <figure class="icon2c">
+            <img src="/build/img/contenido/Pag20/icon2click.svg" alt="icono click">
+        </figure>
+        <p>
+            Da clic en el icono de cada Diferencia para conocer en qué se distinguen el Lavado de Dinero del Financiamiento al Terrorismo.
+        </p>
+    </div>
+    <div class="contenido1">
+        <div class="nivel01">
+            <div class="cuadro-negro">
+                <p>
+                    LAVADO DE DINERO
+                </p>
+            </div>
+            <div class="cuadro-naranja">
+                <p>
+                    DIFERENCIAS
+                </p>
+            </div>
+            <div class="cuadro-azul">
+                <p>
+                    FINANCIAMIENTO AL TERRORISMO
+                </p>
+            </div>
+        </div>
+
+        <div class="nivel-inf">
+            <div class="cuadro-claro">
+                <p>
+                    Legalizar las ganancias
+                </p>
+            </div>
+            <div class="cuadro-central">
+                <figure class="icon-c">
+                    <img src="/build/img/contenido/Pag20/persona-central.svg" alt="icono persona">
+                </figure>
+                <figure class="cuadro-c">
+                    <img src="/build/img/contenido/Pag20/cuadro-central.svg" alt="cuadro central">
+                </figure>
+            </div>
+            <div class="cuadro-claro">
+                <p>
+                    Generar temor/terror
+                </p>
+            </div>
+        </div>
+
+        <div class="nivel-inf">
+            <div class="cuadro-claro">
+                <p>
+                    Recursos ilegales
+                </p>
+            </div>
+            <div class="cuadro-central">
+                <figure class="icon-c">
+                    <img src="/build/img/contenido/Pag20/persona-central.svg" alt="icono persona">
+                </figure>
+                <figure class="cuadro-c">
+                    <img src="/build/img/contenido/Pag20/cuadro-central.svg" alt="cuadro central">
+                </figure>
+            </div>
+            <div class="cuadro-claro">
+                <p>
+                    Recursos ilegales o legales
+                </p>
+            </div>
+        </div>
+
+        <div class="nivel-inf">
+            <div class="cuadro-claro">
+                <p>
+                    El dinero utilizado por las actividades delincuenciales llega a ser mayor.
+                </p>
+            </div>
+            <div class="cuadro-central">
+                <figure class="icon-c">
+                    <img src="/build/img/contenido/Pag20/persona-central.svg" alt="icono persona">
+                </figure>
+                <figure class="cuadro-c">
+                    <img src="/build/img/contenido/Pag20/cuadro-central.svg" alt="cuadro central">
+                </figure>
+            </div>
+            <div class="cuadro-claro">
+                <p>
+                    El volumen de fondos que manejan los terroristas es mucho menor.
+                </p>               
+            </div>
+        </div>
+
+        <div class="nivel-inf">
+            <div class="cuadro-claro">
+                <p>
+                    Para que se genere este delito, existen delitos previos.
+
+                </p>
+            </div>
+            <div class="cuadro-central">
+                <figure class="icon-c">
+                    <img src="/build/img/contenido/Pag20/persona-central.svg" alt="icono persona">
+                </figure>
+                <figure class="cuadro-c">
+                    <img src="/build/img/contenido/Pag20/cuadro-central.svg" alt="cuadro central">
+                </figure>
+            </div>
+            <div class="cuadro-claro">
+                <p>
+                    No ha habido delitos previos
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <div class="cuadro2click">
+        <figure class="icon2c">
+            <img src="/build/img/contenido/Pag20/icon2click.svg" alt="icono click">
+        </figure>
+        <p>
+            Da clic en el icono de cada Diferencia para conocer en qué se distinguen el Lavado de Dinero del Financiamiento al Terrorismo.
+        </p>
+    </div>
+    <div class="contenido2">
+        <div class="nivel01">
+            <div class="cuadro-negro">
+                <p>
+                    LAVADO DE DINERO
+                </p>
+            </div>
+            <div class="cuadro-naranja">
+                <p>
+                    DIFERENCIAS
+                </p>
+            </div>
+            <div class="cuadro-azul">
+                <p>
+                    FINANCIAMIENTO AL TERRORISMO
+                </p>
+            </div>
+        </div>
+        <div class="contenido3">
+            <div class="maletin">
+                <figure class="i-maletin">
+                    <img src="/build/img/contenido/Pag20/maletin-amarillo.svg" alt="maletin amarillo">
+                </figure>
+                <p>
+                    Son delitos financieros que tienen consecuencias económicas.
+                </p>             
+            </div>
+            <div class="maletin">
+                <figure class="i-maletin">
+                    <img src="/build/img/contenido/Pag20/maletin-verde.svg" alt="maletin verde">
+                </figure>
+                <p>
+                    Pueden amenazar su estabilidad del sector financiero de un país.
+                </p>             
+            </div>
+            <div class="maletin">
+                <figure class="i-maletin">
+                    <img src="/build/img/contenido/Pag20/maletin-azul.svg" alt="maletin azul">
+                </figure>
+                <p>
+                    La prevención es esencial para salvaguardar la integridad de los mercados y del marco financiero mundial.
+                </p>             
+            </div>
+            <div class="maletin">
+                <figure class="i-maletin">
+                    <img src="/build/img/contenido/Pag20/maletin-rojo.svg" alt="maletin rojo">
+                </figure>
+                <p>
+                    Propician el anonimato y la falta de transparencia en sus transacciones.
+                </p>             
+            </div>
+        </div>
+    </div>
 </body>
 </html>
