:fire: Actividades finales 1.0

--- a/contenido/pag26.html
+++ b/contenido/pag26.html
@@ -7,6 +7,32 @@
     <title>Página 26</title>
 </head>
 <body>
-    Página 26
+    <div id="cont-pagina26">
+        <div class="cont-imagen">
+            <img src="./build/img/contenido/Pag26/hombre.svg" alt="hombre">
+        </div>
+        <div class="cont-instrucciones">
+            <div id="revisar">
+                <p>Hemos llegado al final de este curso, ahora revisaremos algunas 
+                    situaciones particulares para tu área.</p>
+                <p>Selecciona el caso que te corresponde.</p> 
+            </div>
+            <div id="lista">
+                <ol>
+                    <li>Lee el caso detenidamente.</li>
+                    <li>Responde las preguntas dando clic sobre el inciso que consideras la respuesta correcta. </li>
+                    <li>Si respondes correctamente a las preguntas, se te dará un punto adicional sobre tu calificación final en la evaluación de este curso.</li>
+                </ol>
+            </div>
+            <div id="suerte">
+                <h4>¡Mucha suerte!</h4>
+            </div>
+            <div class="cont-botones">
+                <a id="aseguradora" href="">Caso Aseguradora</a>
+                <a id="patria" href="">Caso Patria</a>
+                <a id="reaseguradora" href="">Caso Reaseguradora</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
