:construction_worker: Arreglos

--- a/contenido/pag18.html
+++ b/contenido/pag18.html
@@ -11,7 +11,7 @@
         <div class="contenedor2 activo">
             <div class="contenedor1">
                 <figure class="persona1">
-                    <img src="/build/img/contenido/Pag18/persona1.svg" alt="persona 1">
+                    <img src="./build/img/contenido/Pag18/persona1.svg" alt="persona 1">
                 </figure>
                 <div class="cuadro-azul">
                     <p class="txt-azul">
@@ -43,7 +43,7 @@
                         <p>VERDADERO</p>
                     </div>
                     <div class="resultado" data-res="1">
-                        <img src="/build/img/contenido/Pag18/i-verdadero.svg">
+                        <img src="./build/img/contenido/Pag18/i-verdadero.svg">
                     </div>
                 </div>
                 <div class="opcion">
@@ -51,7 +51,7 @@
                         <p>FALSO</p>
                     </div>
                     <div class="resultado">
-                        <img src="/build/img/contenido/Pag18/i-falso.svg">
+                        <img src="./build/img/contenido/Pag18/i-falso.svg">
                     </div>
                 </div>
             </div>
@@ -74,7 +74,7 @@
                         <p>VERDADERO</p>
                     </div>
                     <div class="resultado" data-res="0">
-                        <img src="/build/img/contenido/Pag18/i-falso.svg">
+                        <img src="./build/img/contenido/Pag18/i-falso.svg">
                     </div>
                 </div>
                 <div class="opcion">
@@ -82,7 +82,7 @@
                         <p>FALSO</p>
                     </div>
                     <div class="resultado" data-res="1">
-                        <img src="/build/img/contenido/Pag18/i-verdadero.svg">
+                        <img src="./build/img/contenido/Pag18/i-verdadero.svg">
                     </div>
                 </div>
             </div>
@@ -104,7 +104,7 @@
                         <p>VERDADERO</p>
                     </div>
                     <div class="resultado" data-res="1">
-                        <img src="/build/img/contenido/Pag18/i-verdadero.svg">
+                        <img src="./build/img/contenido/Pag18/i-verdadero.svg">
                     </div>
                 </div>
                 <div class="opcion">
@@ -112,7 +112,7 @@
                         <p>FALSO</p>
                     </div>
                     <div class="resultado" data-res="0">
-                        <img src="/build/img/contenido/Pag18/i-falso.svg">
+                        <img src="./build/img/contenido/Pag18/i-falso.svg">
                     </div>
                 </div>
             </div>
@@ -134,7 +134,7 @@
                         <p>VERDADERO</p>
                     </div>
                     <div class="resultado" data-res="0">
-                        <img src="/build/img/contenido/Pag18/i-falso.svg">
+                        <img src="./build/img/contenido/Pag18/i-falso.svg">
                     </div>
                 </div>
                 <div class="opcion">
@@ -142,7 +142,7 @@
                         <p>FALSO</p>
                     </div>
                     <div class="resultado" data-res="1">
-                        <img src="/build/img/contenido/Pag18/i-verdadero.svg">
+                        <img src="./build/img/contenido/Pag18/i-verdadero.svg">
                     </div>
                 </div>
             </div>
@@ -164,7 +164,7 @@
                         <p>VERDADERO</p>
                     </div>
                     <div class="resultado" data-res="1">
-                        <img src="/build/img/contenido/Pag18/i-verdadero.svg">
+                        <img src="./build/img/contenido/Pag18/i-verdadero.svg">
                     </div>
                 </div>
                 <div class="falso">
@@ -172,14 +172,14 @@
                         <p>FALSO</p>
                     </div>
                     <div class="opcion" data-res="0">
-                        <img src="/build/img/contenido/Pag18/i-falso.svg">
+                        <img src="./build/img/contenido/Pag18/i-falso.svg">
                     </div>
                 </div>
             </div>
         </div>
         <div class="contenedor3">
             <figure class="persona1">
-                <img src="/build/img/contenido/Pag18/persona1.svg" alt="persona 1 foot">
+                <img src="./build/img/contenido/Pag18/persona1.svg" alt="persona 1 foot">
             </figure>
             <div class="cuadro-verde">
                 <div class="cuadro-blanco">
