--- a/contenido/pag19.html
+++ b/contenido/pag19.html
@@ -14,7 +14,7 @@
     </div>
     <div class="contenido2">
         <figure class="persona1">
-            <img src="/build/img/contenido/Pag19/persona1.svg" alt="persona1">
+            <img src="./build/img/contenido/Pag19/persona1.svg" alt="persona1">
         </figure>
         <div class="rec1">
             <ul>
@@ -36,7 +36,7 @@
                     </p>
                 </li>
                 <figure class="vinoculares">
-                    <img src="/build/img/contenido/Pag19/vinoculares.svg" alt="">
+                    <img src="./build/img/contenido/Pag19/vinoculares.svg" alt="">
                 </figure>
             </ul>
         </div>
@@ -49,7 +49,7 @@
         </div>
         <figure class="contenedor2">
             <figure class="persona2">
-                <img src="/build/img/contenido/Pag19/persona2.svg" alt="persona 2">
+                <img src="./build/img/contenido/Pag19/persona2.svg" alt="persona 2">
             </figure>
         </figure>
     </div>
@@ -73,7 +73,7 @@
                 </div>
             </div>
             <figure class="persona-pizarra">
-                <img src="/build/img/contenido/Pag19/persona-pizarra.svg" alt="persona pizarra">
+                <img src="./build/img/contenido/Pag19/persona-pizarra.svg" alt="persona pizarra">
             </figure>
         </div>
         <div class="contenido5">
@@ -89,7 +89,7 @@
                     </p>
                 </div>
                 <figure class="persona-esc">
-                    <img src="/build/img/contenido/Pag19/persona-esc.svg" alt="persona escritorio">
+                    <img src="./build/img/contenido/Pag19/persona-esc.svg" alt="persona escritorio">
                 </figure>
             </div>
             <div class="contenido6">
@@ -122,25 +122,25 @@
         <div class="contenido12">
             <div class="cuadro naranja">
                 <figure id="img1">
-                    <img src="/build/img/contenido/Pag19/billete-nj.svg" alt="icono billetes">
+                    <img src="./build/img/contenido/Pag19/billete-nj.svg" alt="icono billetes">
                 </figure>
                 Ahora las operaciones <b>relevantes</b> se reportarán por un monto igual o superior a <b>$7,500</b> dólares de los Estados Unidos.
             </div>
             <div class="cuadro naranja">
                 <figure id="img2">
-                    <img src="/build/img/contenido/Pag19/calendario-nj.svg" alt="icono calendario">
+                    <img src="./build/img/contenido/Pag19/calendario-nj.svg" alt="icono calendario">
                 </figure>
                 <b>Las operaciones inusuales e internas preocupantes</b>  deberán ser enviadas a la autoridad dentro de los tres días siguientes a que el Comité de Comunicación y Control las haya dictaminado con ese carácter.
             </div>
             <div class="cuadro amarillo">
                 <figure id="img3">
-                    <img src="/build/img/contenido/Pag19/escudo-am.svg" alt="icono escudo">
+                    <img src="./build/img/contenido/Pag19/escudo-am.svg" alt="icono escudo">
                 </figure>
                 Podrá nombrarse a un <b>Oficial de Cumplimiento</b> interino, en caso de ausencia temporal del mismo.
             </div>
             <div class="cuadro azul">
                 <figure id="img4">
-                    <img src="/build/img/contenido/Pag19/maestro-azul.svg" alt="icono maestro-azul">
+                    <img src="./build/img/contenido/Pag19/maestro-azul.svg" alt="icono maestro-azul">
                 </figure>
                 La Capacitación deberá ser tomada <b>también por los miembros de los Consejos de Administración.</b>
             </div>
