--- a/contenido/pag20.html
+++ b/contenido/pag20.html
@@ -9,7 +9,7 @@
 <body>
     <div class="cuadro2click">
         <figure class="icon2c">
-            <img src="/build/img/contenido/Pag20/icon2click.svg" alt="icono click">
+            <img src="./build/img/contenido/Pag20/icon2click.svg" alt="icono click">
         </figure>
         <p>
             Da clic en el icono de cada Diferencia para conocer en qué se distinguen el Lavado de Dinero del Financiamiento al Terrorismo.
@@ -42,10 +42,10 @@
             </div>
             <div class="cuadro-central">
                 <figure class="icon-c">
-                    <img src="/build/img/contenido/Pag20/persona-central.svg" alt="icono persona">
+                    <img src="./build/img/contenido/Pag20/persona-central.svg" alt="icono persona">
                 </figure>
                 <figure class="cuadro-c">
-                    <img src="/build/img/contenido/Pag20/cuadro-central.svg" alt="cuadro central">
+                    <img src="./build/img/contenido/Pag20/cuadro-central.svg" alt="cuadro central">
                 </figure>
             </div>
             <div class="cuadro-claro">
@@ -63,10 +63,10 @@
             </div>
             <div class="cuadro-central">
                 <figure class="icon-c">
-                    <img src="/build/img/contenido/Pag20/persona-central.svg" alt="icono persona">
+                    <img src="./build/img/contenido/Pag20/persona-central.svg" alt="icono persona">
                 </figure>
                 <figure class="cuadro-c">
-                    <img src="/build/img/contenido/Pag20/cuadro-central.svg" alt="cuadro central">
+                    <img src="./build/img/contenido/Pag20/cuadro-central.svg" alt="cuadro central">
                 </figure>
             </div>
             <div class="cuadro-claro">
@@ -84,10 +84,10 @@
             </div>
             <div class="cuadro-central">
                 <figure class="icon-c">
-                    <img src="/build/img/contenido/Pag20/persona-central.svg" alt="icono persona">
+                    <img src="./build/img/contenido/Pag20/persona-central.svg" alt="icono persona">
                 </figure>
                 <figure class="cuadro-c">
-                    <img src="/build/img/contenido/Pag20/cuadro-central.svg" alt="cuadro central">
+                    <img src="./build/img/contenido/Pag20/cuadro-central.svg" alt="cuadro central">
                 </figure>
             </div>
             <div class="cuadro-claro">
@@ -106,10 +106,10 @@
             </div>
             <div class="cuadro-central">
                 <figure class="icon-c">
-                    <img src="/build/img/contenido/Pag20/persona-central.svg" alt="icono persona">
+                    <img src="./build/img/contenido/Pag20/persona-central.svg" alt="icono persona">
                 </figure>
                 <figure class="cuadro-c">
-                    <img src="/build/img/contenido/Pag20/cuadro-central.svg" alt="cuadro central">
+                    <img src="./build/img/contenido/Pag20/cuadro-central.svg" alt="cuadro central">
                 </figure>
             </div>
             <div class="cuadro-claro">
@@ -122,7 +122,7 @@
 
     <div class="cuadro2click">
         <figure class="icon2c">
-            <img src="/build/img/contenido/Pag20/icon2click.svg" alt="icono click">
+            <img src="./build/img/contenido/Pag20/icon2click.svg" alt="icono click">
         </figure>
         <p>
             Da clic en el icono de cada Diferencia para conocer en qué se distinguen el Lavado de Dinero del Financiamiento al Terrorismo.
@@ -149,7 +149,7 @@
         <div class="contenido3">
             <div class="maletin">
                 <figure class="i-maletin">
-                    <img src="/build/img/contenido/Pag20/maletin-amarillo.svg" alt="maletin amarillo">
+                    <img src="./build/img/contenido/Pag20/maletin-amarillo.svg" alt="maletin amarillo">
                 </figure>
                 <p>
                     Son delitos financieros que tienen consecuencias económicas.
@@ -157,7 +157,7 @@
             </div>
             <div class="maletin">
                 <figure class="i-maletin">
-                    <img src="/build/img/contenido/Pag20/maletin-verde.svg" alt="maletin verde">
+                    <img src="./build/img/contenido/Pag20/maletin-verde.svg" alt="maletin verde">
                 </figure>
                 <p>
                     Pueden amenazar su estabilidad del sector financiero de un país.
@@ -165,7 +165,7 @@
             </div>
             <div class="maletin">
                 <figure class="i-maletin">
-                    <img src="/build/img/contenido/Pag20/maletin-azul.svg" alt="maletin azul">
+                    <img src="./build/img/contenido/Pag20/maletin-azul.svg" alt="maletin azul">
                 </figure>
                 <p>
                     La prevención es esencial para salvaguardar la integridad de los mercados y del marco financiero mundial.
@@ -173,7 +173,7 @@
             </div>
             <div class="maletin">
                 <figure class="i-maletin">
-                    <img src="/build/img/contenido/Pag20/maletin-rojo.svg" alt="maletin rojo">
+                    <img src="./build/img/contenido/Pag20/maletin-rojo.svg" alt="maletin rojo">
                 </figure>
                 <p>
                     Propician el anonimato y la falta de transparencia en sus transacciones.
