--- a/contenido/pag17.html
+++ b/contenido/pag17.html
@@ -5,16 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Metodología de Evaluación de Riesgos PLD/CFT</title>
-    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-	
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-	<script src="js/slider.js"></script>
+    
 </head>
 <body>
     <div class="contenedor1">
         <figure class="personaje1">
-            <img src="/build/img/contenido/Pag17/persona1.svg" alt="persona 1">
+            <img src="./build/img/contenido/Pag17/persona1.svg" alt="persona 1">
         </figure>
         <div class="cuadro-negro">
             <p>La Metodología de Evaluación de Riesgos, nos permite entender cómo y hasta qué punto somos vulnerables a los riesgos en materia de LD/FT, lo que nos permite asignar adecuadamente nuestros recursos y aplicar procesos de gestión de riesgos efectivos a las características de esos riesgos.</p>
@@ -24,17 +20,17 @@
         <div class="contenedor2">
             <div class="grafica-pastel">
                 <figure class="grafica-n">
-                    <img src="/build/img/contenido/Pag17/grafica-pastel.svg" alt="grafica pastel">
+                    <img src="./build/img/contenido/Pag17/grafica-pastel.svg" alt="grafica pastel">
                 </figure>
                 <figure class="grafica-pq">
-                    <img src="/build/img/contenido/Pag17/grafica-pastel-pq.svg" alt="grafica pastel">
+                    <img src="./build/img/contenido/Pag17/grafica-pastel-pq.svg" alt="grafica pastel">
                 </figure>
             </div>
         </div>
         <div class="contenedor3">
             <div class="buzon">
                 <figure>
-                    <img src="/build/img/contenido/Pag17/buzon.svg" alt="buzon">
+                    <img src="./build/img/contenido/Pag17/buzon.svg" alt="buzon">
                 </figure>
                 <p class="text-buzon">
                     Buzón de Denuncia y correo del Oficial de Cumplimiento
@@ -47,7 +43,7 @@
                 </p>
                 <div class="persona2">
                     <figure class="p2">
-                        <img src="/build/img/contenido/Pag17/persona2.svg" alt="persona 2">
+                        <img src="./build/img/contenido/Pag17/persona2.svg" alt="persona 2">
                     </figure>
                 </div>
             </div>
@@ -56,7 +52,7 @@
 
     <div class="intranet">
         <figure class="persona-computadora">
-            <img src="/build/img/contenido/Pag17/persona-computadora.svg" alt="persona computadora">
+            <img src="./build/img/contenido/Pag17/persona-computadora.svg" alt="persona computadora">
         </figure>
         <div class="dialogo3">
             <p class="text-globo">
@@ -75,7 +71,7 @@
                         para la contratación. 
                     </p>
                     <figure>
-                        <img src="/build/img/contenido/Pag17/slide1.svg" alt="slide 1">
+                        <img src="./build/img/contenido/Pag17/slide1.svg" alt="slide 1">
                     </figure>
                 </div>
               </div>
@@ -85,7 +81,7 @@
                         Cuando los clientes intenten sobornar, persuadir o intimidar a los Colaboradores con el propósito de realizar actividades u operaciones inusuales en contra de la Ley o de las Políticas Internas.
                     </p>
                     <figure>
-                        <img src="/build/img/contenido/Pag17/slide2.svg" alt="slide 2">
+                        <img src="./build/img/contenido/Pag17/slide2.svg" alt="slide 2">
                     </figure>
                 </div>
               </div>
@@ -95,7 +91,7 @@
                         La apariencia del cliente o su domicilio no concuerdan con la información.
                     </p>
                     <figure>
-                        <img src="/build/img/contenido/Pag17/slide3.svg" alt="slide 3">
+                        <img src="./build/img/contenido/Pag17/slide3.svg" alt="slide 3">
                     </figure>
                 </div>
               </div>
@@ -105,7 +101,7 @@
                         La apariencia del cliente o su domicilio no concuerdan con la información.
                     </p>
                     <figure>
-                        <img src="/build/img/contenido/Pag17/slide4.svg" alt="slide 4">
+                        <img src="./build/img/contenido/Pag17/slide4.svg" alt="slide 4">
                     </figure>
                 </div>
               </div>
@@ -115,7 +111,7 @@
                         La apariencia del cliente o su domicilio no concuerdan con la información.
                     </p>
                     <figure>
-                        <img src="/build/img/contenido/Pag17/slide5.svg" alt="slide 5">
+                        <img src="./build/img/contenido/Pag17/slide5.svg" alt="slide 5">
                     </figure>
                 </div>
               </div>
