avance hasta pagina 22

--- a/contenido/pag22.html
+++ b/contenido/pag22.html
@@ -7,6 +7,78 @@
     <title>Página 22</title>
 </head>
 <body>
-    Página 22
+    <div class="cuadro-azul22">
+        <p>
+            Etapas del Lavado de Dinero
+        </p>
+    </div>
+    <div class="cuadro-claro22">
+        <figure class="i-click">
+            <img src="/build/img/contenido/Pag22/i-click.svg" alt="icono click">
+        </figure>
+        <p>
+            Da clic en cada etapa para conocer más.
+        </p>
+    </div>
+    <div class="contenido1pag22">
+        <div class="contenido1_1pag22">
+            <div class="cuadro-amarillo22">
+                <p>
+                    Colocación
+                </p>
+            </div>
+            <div class="cuadro-verde22">
+                <p>
+                    Estratificación o enmascaramiento
+                </p>
+            </div>
+            <div class="cuadro-azul22-2">
+                <p>
+                    Integración o reingreso 
+                </p>
+            </div>
+        </div>
+        <div class="contenido1_2-22">
+            <div class="cuadro2-amarillo22">
+                <div class="minicuadro-claro">
+
+                </div>
+                <div class="minicuadro-amarillo">
+                    <figure class="triangulo">
+                        <img src="/build/img/contenido/Pag22/triangulo-amarillo.svg" alt="triangulo amarillo">
+                    </figure>
+                    <p>
+                        El sujeto activo del Lavado de Dinero introduce al sistema económico formal, en efectivo, transferencias o cheques, recursos propios o ajenos de actividades ilícitas. 
+                    </p>
+                </div>
+            </div>
+            <div class="cuadro2-verde22">
+                <div class="minicuadro-claro">
+
+                </div>
+                <div class="minicuadro-verde">
+                    <figure class="triangulo">
+                        <img src="/build/img/contenido/Pag22/triangulo-verde.svg" alt="triangulo verde">
+                    </figure>
+                    <p>
+                        El sujeto activo del Lavado de Dinero introduce al sistema económico formal, en efectivo, transferencias o cheques, recursos propios o ajenos de actividades ilícitas. 
+                    </p>
+                </div>
+            </div>
+            <div class="cuadro2-azul22">
+                <div class="minicuadro-claro">
+
+                </div>
+                <div class="minicuadro-azul">
+                    <figure class="triangulo">
+                        <img src="/build/img/contenido/Pag22/triangulo-azul.svg" alt="triangulo azul">
+                    </figure>
+                    <p>
+                        El sujeto activo del Lavado de Dinero introduce al sistema económico formal, en efectivo, transferencias o cheques, recursos propios o ajenos de actividades ilícitas. 
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
