correccion css pag19

--- a/contenido/pag19.html
+++ b/contenido/pag19.html
@@ -12,18 +12,18 @@
             En la politica de identificación
         </p>
     </div>
-    <div class="contenido2">
-        <figure class="persona1">
+    <div class="contenido2pag19">
+        <figure class="persona1pag19">
             <img src="/build/img/contenido/Pag19/persona1.svg" alt="persona1">
         </figure>
-        <div class="rec1">
+        <div class="rec1pag19">
             <ul>
                 <li>
                     Se incorpora la  identificación de compradores  de salvamentos y entidades fiduciarias.
                 </li>
             </ul>
         </div>
-        <div class="rec2">
+        <div class="rec2pag19">
             <ul>
                 <li>
                     <p>
@@ -40,60 +40,60 @@
                 </figure>
             </ul>
         </div>
-        <div class="rec3">
+        <div class="rec3pag19">
             <ul>
                 <li>
                     Las Compañías podrán suspender el proceso de  identificación cuando se estime de forma razonable que nuestros posibles clientes se encuentran relacionados con operaciones de lavado de dinero o alguno de los riesgos previstos en el Manual de Cumplimiento PLD/CFT.
                 </li>
             </ul>
         </div>
-        <figure class="contenedor2">
-            <figure class="persona2">
+        <figure class="contenedor2pag19">
+            <figure class="persona2pag19">
                 <img src="/build/img/contenido/Pag19/persona2.svg" alt="persona 2">
             </figure>
         </figure>
     </div>
-    <div class="cuadro-naranja">
+    <div class="cuadropag19-naranja">
         <p>
             Se adiciona un capítulo de Enfoque Basado en Riesgo.
         </p>
     </div>
-    <div class="contenido3">
-        <div class="contenido4">
-            <div class="contenido8">
-                <div class="titulo-azul">
+    <div class="contenido3pag19">
+        <div class="contenido4pag19">
+            <div class="contenido8pag19">
+                <div class="titulopag19-azul">
                     <p>
                         Para implementar:
                     </p>
                 </div>
-                <div class="cuadro-blanco">
+                <div class="cuadropag19-blanco">
                     <p>
                         Una metodología de Evaluación de Grado de Riesgos que permita identificar el riesgo de Lavado de Dinero y financiamiento al Terrorismo al que se encuentra expuesta la Compañía. 
                     </p>
                 </div>
             </div>
-            <figure class="persona-pizarra">
+            <figure class="personapag19-pizarra">
                 <img src="/build/img/contenido/Pag19/persona-pizarra.svg" alt="persona pizarra">
             </figure>
         </div>
-        <div class="contenido5">
-            <div class="titulo-verde">
+        <div class="contenido5pag19">
+            <div class="titulopag19-verde">
                 <p>
                     En la Política de Conocimiento:
                 </p>
             </div>
-            <div class="cuadro2-blanco">
-                <div class="globo1">
+            <div class="cuadro2pag19-blanco">
+                <div class="globo1pag19">
                     <p>
                         En operaciones celebradas de forma no presencial, deberá obtenerse la información relativa a la geolocalización.
                     </p>
                 </div>
-                <figure class="persona-esc">
+                <figure class="personapag19-esc">
                     <img src="/build/img/contenido/Pag19/persona-esc.svg" alt="persona escritorio">
                 </figure>
             </div>
-            <div class="contenido6">
-                <div class="globo2">
+            <div class="contenido6pag19">
+                <div class="globo2pag19">
                     <p>
                         Se adiciona un riesgo medio entre alto y bajo a la clasificación del grado de riesgo de  los clientes.
                     </p>
@@ -101,52 +101,52 @@
             </div>
         </div>
     </div>
-    <div class="contenido10">
-        <div class="contenido11">
-            <div class="cuadro-naranja">
+    <div class="contenido10pag19">
+        <div class="contenido11pag19">
+            <div class="cuadropag19-naranja">
                 <p>
                     En Operaciones Relevantes, Inusuales e Internas Preocupantes: 
                 </p>
             </div>
-            <div class="cuadro-amarillo">
+            <div class="cuadropag19-amarillo">
                 <p>
                     En Estructuras Internas:
                 </p>
             </div>
-            <div class="cuadro-azul">
+            <div class="cuadropag19-azul">
                 <p>
                     En Capacitación y Difusión:
                 </p>
             </div>
         </div>
-        <div class="contenido12">
-            <div class="cuadro naranja">
+        <div class="contenido12pag19">
+            <div class="cuadropag19 naranja">
                 <figure id="img1">
                     <img src="/build/img/contenido/Pag19/billete-nj.svg" alt="icono billetes">
                 </figure>
                 Ahora las operaciones <b>relevantes</b> se reportarán por un monto igual o superior a <b>$7,500</b> dólares de los Estados Unidos.
             </div>
-            <div class="cuadro naranja">
-                <figure id="img2">
+            <div class="cuadropag19 naranja">
+                <figure id="img2pag19">
                     <img src="/build/img/contenido/Pag19/calendario-nj.svg" alt="icono calendario">
                 </figure>
                 <b>Las operaciones inusuales e internas preocupantes</b>  deberán ser enviadas a la autoridad dentro de los tres días siguientes a que el Comité de Comunicación y Control las haya dictaminado con ese carácter.
             </div>
-            <div class="cuadro amarillo">
-                <figure id="img3">
+            <div class="cuadropag19 amarillo">
+                <figure id="img3pag19">
                     <img src="/build/img/contenido/Pag19/escudo-am.svg" alt="icono escudo">
                 </figure>
                 Podrá nombrarse a un <b>Oficial de Cumplimiento</b> interino, en caso de ausencia temporal del mismo.
             </div>
-            <div class="cuadro azul">
-                <figure id="img4">
+            <div class="cuadropag19 azul">
+                <figure id="img4pag19">
                     <img src="/build/img/contenido/Pag19/maestro-azul.svg" alt="icono maestro-azul">
                 </figure>
                 La Capacitación deberá ser tomada <b>también por los miembros de los Consejos de Administración.</b>
             </div>
         </div>
-        <div class="contenido13">
-            <div class="cuadro-negro">
+        <div class="contenido13pag19">
+            <div class="cuadropag19-negro">
                 <p>
                     Se adicionan capítulos de Modelos Novedosos de Intercambio de Información entre entidades, así como de Listas de Personas Bloqueadas.
                 </p>
